fix overflow on home page

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
     align-items: center;
     height:100%;
     width:100%;
-
+    overflow: hidden;
 }
 
 .mainbg-light{
